--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "server"
   ],
   "homepage": "https://github.com/chbrown/signs-server",
-  "repository": "git://github.com/chbrown/signs-server.git",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chbrown/signs-server"
+  },
   "author": "Christopher Brown <io@henrian.com> (http://henrian.com)",
   "license": "MIT",
   "dependencies": {
