Replace type_declarations/ with declarations package; other small modernizations

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "yargs": "*"
   },
   "devDependencies": {
-    "typescript": "*"
+    "declarations": "*",
+    "typescript": "next"
   },
   "bin": {
     "signs-server": "bin/signs-server"
